Fix double focus issue in search results page

Changes:
Remove the first result's highlight when focus is moved from search
box textfield. (e.g. to close button or last search result).

Bug: 919050
Test: AppListViewFocusTest.FirstResultSelectedAfterSearchResultsUpdated
Change-Id: I6a85f04631145bddfa439ee8acbcff417e0b9d42
Reviewed-on: https://chromium-review.googlesource.com/c/1423350
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624391}
Former-commit-id: aaee335781975296a269a9324798e5a23b2cdc41