ash/app_list/views/app_list_main_view.cc
@@ -19,6 +19,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/app_list/views/apps_grid_view.h"
 #include "ash/app_list/views/contents_view.h"
 #include "ash/app_list/views/search_box_view.h"
+#include "ash/app_list/views/search_result_base_view.h"
 #include "ash/app_list/views/search_result_page_view.h"
 #include "ash/public/cpp/app_list/app_list_constants.h"
 #include "ash/public/cpp/app_list/app_list_features.h"
@@ -212,6 +213,22 @@ void AppListMainView::ActiveChanged(search_box::SearchBoxViewBase* sender) {
     // Close the search results page if the search box is inactive.
     contents_view_->ShowSearchResults(false);
   }
+}
+
+void AppListMainView::SearchBoxFocusChanged(
+    search_box::SearchBoxViewBase* sender) {
+  // A fake focus (highlight) is always set on the first search result. When the
+  // user moves focus from the search box textfield (e.g. to close button or
+  // last search result), the fake focus should be removed.
+  if (sender->search_box()->HasFocus())
+    return;
+
+  SearchResultBaseView* first_result_view =
+      contents_view_->search_results_page_view()->first_result_view();
+  if (!first_result_view || !first_result_view->background_highlighted())
+    return;
+
+  first_result_view->SetBackgroundHighlighted(false);
 }
 
 void AppListMainView::AssistantButtonPressed() {
