ash/app_list/views/app_list_main_view.h
@@ -94,6 +94,7 @@ class APP_LIST_EXPORT AppListMainView
   void AssistantButtonPressed() override;
   void BackButtonPressed() override;
   void ActiveChanged(search_box::SearchBoxViewBase* sender) override;
+  void SearchBoxFocusChanged(search_box::SearchBoxViewBase* sender) override;
 
   AppListViewDelegate* delegate_;  // Owned by parent view (AppListView).
   AppListModel* model_;        // Unowned; ownership is handled by |delegate_|.
