ui/chromeos/search_box/search_box_view_base.cc
@@ -428,6 +428,8 @@ void SearchBoxViewBase::OnSearchBoxFocusedChanged() {
   UpdateSearchBoxBorder();
   Layout();
   SchedulePaint();
+
+  delegate_->SearchBoxFocusChanged(this);
 }
 
 bool SearchBoxViewBase::IsSearchBoxTrimmedQueryEmpty() const {
