ash/app_list/views/search_box_view_unittest.cc
@@ -145,6 +145,7 @@ class SearchBoxViewTest : public views::test::WidgetTest,
   void AssistantButtonPressed() override {}
   void BackButtonPressed() override {}
   void ActiveChanged(search_box::SearchBoxViewBase* sender) override {}
+  void SearchBoxFocusChanged(search_box::SearchBoxViewBase* sender) override {}
 
   AppListTestViewDelegate view_delegate_;
   views::Widget* widget_;
